force-app/main/default/objects/SurveyQuestionnaire__c/fields/Next_Question__c.field-meta.xml
<CustomField>
    <fullName>Next_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Question</label>
    <referenceTo>SurveyQuestion__c</referenceTo>
    <relationshipLabel>SurveyQuestionnaires (Next Question)</relationshipLabel>
    <relationshipName>SurveyQuestionnaires1</relationshipName>
    <type>Lookup</type>
</CustomField>