force-app/main/default/objects/SurveyQuestionnaire__c/fields/SurveyQuestionChoice__c.field-meta.xml
<CustomField>
    <fullName>SurveyQuestionChoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SurveyQuestionChoice</label>
    <referenceTo>SurveyQuestionChoice__c</referenceTo>
    <relationshipLabel>SurveyQuestionnaires</relationshipLabel>
    <relationshipName>SurveyQuestionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>