force-app/main/default/objects/SurveyQuestionnaire__c/validationRules/SurveyQue_choice_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>SurveyQue_choice_cannot_be_blank</fullName>
    <active>true</active>
    <description>Survey question choice cannot be blank if isDependent field is true</description>
    <errorConditionFormula>AND( isDependent__c , ISBLANK( SurveyQuestionChoice__c ) )</errorConditionFormula>
    <errorMessage>Survey Question Choice is mandatory when isDependent is true</errorMessage>
</ValidationRule>